<resources>
    <string name="app_name">eLibrary</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="entrance">Вход</string>
    <string name="create_account">Нет аккаунта?Создать аккаунт!</string>
    <string name="create_account_regisrty">СОЗДАНИЕ НОВГО АККАУНТА</string>
    <string name="create_login">Введите логин</string>
    <string name="create_password">Введите пароль</string>
    <string name="reapid_password">Повторите пароль</string>
    <string name="next">Далее</string>
    <string name="favorites">Избранное</string>
    <string name="search">Поиск</string>
    <string name="news">Новости</string>
    <string name="reader">Читалка</string>
    <string name="reader_book">Читалка</string>
    <string name="create_email">Введите email</string>
    <string name="new_book">Новинки</string>
    <string name="profile">Профиль</string>
    <string name="create_name">Введите имя</string>
    <string name="create_lastname">Введите фамилию</string>
    <string name="registry_account">Зарегистрироватся</string>
    <string name="name_user">name</string>
    <string name="name_book">Название книги</string>
    <string name="first_name_avtor">Имя автора</string>
    <string name="last_name_avtor">Фамилия автора</string>
    <string name="quantity_pages">Количество страниц</string>
    <string name="date_publication">Даты публикации </string>
    <string name="select_genre">Выберите жанр</string>
    <string name="select_image_cover">Выберите картинку</string>
    <string name="enter_description">Введите описание</string>
    <string name="send_book">Добавить</string>
    <string name="download">Скачать</string>
    <string name="enter_word">Введите слово</string>
    <string name="translate">Перевести</string>
    <string name="book_page"> %1$d страниц</string>
    <string name="book_date_publication">Год издания-%1$d </string>
    <string name="more_detailed">Подробнее</string>
    <string name="add_user">Добавлено %1$s </string>
    <string name="read">Читать</string>
    <string name="add_to_read">Добавить в прочитанное</string>
    <string name="create_book">Добавить книгу</string>
    <string name="popular">Популярное</string>
    <string name="exit">Выйти</string>
    <string name="tranlsate">Перевод</string>
    <string name="regis">Регистрация</string>

    <string-array name="serch_title_array">
        <item>По название книги</item>
        <item>По имени автора</item>
        <item>По фамилии автора</item>
    </string-array>
</resources>
