<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">



    <LinearLayout
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/registry_logo"
                android:src="@drawable/registry_logo"
                android:layout_alignParentLeft="true"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true" />
            <ImageView
                android:layout_centerVertical="true"
                android:src="@drawable/registry_title"
                android:layout_toRightOf="@id/registry_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/registry_logo" />
        </RelativeLayout>



        <android.support.design.widget.TextInputLayout

        style="@style/MYTextInputLayout">
        <EditText
            android:id="@+id/edit_email"
            android:inputType="textPersonName"
            android:hint="@string/create_email"
            style="@style/MyEditText" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/MYTextInputLayout">
        <EditText
            android:id="@+id/edit_login"
            android:inputType="textPersonName"
            android:hint="@string/create_login"
            style="@style/MyEditText"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/MYTextInputLayout">
        <EditText
            android:id="@+id/edit_first_name"
            android:inputType="textPersonName"
            android:hint="@string/create_name"
            style="@style/MyEditText"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/MYTextInputLayout">

        <EditText
            android:id="@+id/edit_last_name"
            android:inputType="textPersonName"
            android:hint="@string/create_lastname"
            style="@style/MyEditText"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/MYTextInputLayout">
        <EditText
            android:id="@+id/edit_password"
            android:inputType="textPassword"
            android:hint="@string/create_password"
            style="@style/MyEditText"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/MYTextInputLayout">
        <EditText
            android:id="@+id/reapit_password"
            android:inputType="textPassword"
            android:hint="@string/reapid_password"
            style="@style/MyEditText"/>
    </android.support.design.widget.TextInputLayout>

<TextView
    android:id="@+id/sett_me"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />



    </LinearLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/create_account_user"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_button_background"
        android:text="@string/registry_account"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>