<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView

                android:id="@+id/logo"
                android:src="@drawable/logo_in"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <ImageView
                android:padding="5dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/logo_title"
                android:layout_toRightOf="@id/logo"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_toEndOf="@id/logo" />
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
           style="@style/MYTextInputLayout">
            <EditText
                android:id="@+id/login_in_login"
                android:hint="@string/login"
                style="@style/MyEditText"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
           style="@style/MYTextInputLayout">
            <EditText
                android:id="@+id/login_in_passwrod"
                android:inputType="textPassword"
                android:hint="@string/password"
                style="@style/MyEditText"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_button_background"
            android:padding="10dp"
            android:text="@string/entrance"
            />
        <TextView
            android:id="@+id/create_account"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorLink"
            android:text="@string/create_account"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>